# drosera-mcp-server

./: README.md
mcp-server-example/mcp-trap-generator/: Cargo.toml
mcp-server-example/mcp-trap-generator/src/data/: index.json
mcp-server-example/mcp-trap-generator/src/data/drosera-context/docs/: trap-execution-model.mdx
mcp-server-example/mcp-trap-generator/src/data/drosera-context/website/: .gitignore  README.md  cspell.json  package.json  pnpm-lock.yaml  project-words.txt  vocs.config.tsx
mcp-server-example/mcp-trap-generator/src/data/drosera-context/website/docs/: styles.css
mcp-server-example/mcp-trap-generator/src/data/prompts/: index.md  quick-reference.md  trap-generation-prompt.md  trap-testing-guide.md
mcp-server-example/mcp-trap-generator/src/data/protocols/uniswap/abis/: INonfungiblePositionManager.json  ISwapRouter.json  IUniswapV3Factory.json  IUniswapV3Pool.json
mcp-server-example/mcp-trap-generator/src/data/protocols/uniswap/misc_data/: mainnet.json
mcp-server-example/mcp-trap-generator/src/data/trap-examples/defi-automation/aave-liquidation-trap/: drosera.toml
mcp-server-example/mcp-trap-generator/src/data/trap-examples/defi-automation/fee-change-trap/: drosera.toml
mcp-server-example/mcp-trap-generator/src/data/trap-examples/defi-automation/implementation-swap-trap/: drosera.toml
mcp-server-example/mcp-trap-generator/src/data/trap-examples/defi-automation/liquidity-pool-health-monitor/: package.json
mcp-server-example/mcp-trap-generator/src/server/: simple_main.rs
trap-examples/defi-automation/dormant-contract-trap/: README.md  (+4 more)
(+81 files in other folders)
