[package]
name = "drosera-trap-generator-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for generating Drosera traps with Ethereum protocol context"
authors = ["Drosera Network"]
license = "MIT"

[[bin]]
name = "mcp-server"
path = "src/server/simple_main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"